# cpp-gui-cmake-project-template

./: .build_version  CMakeLists.txt  README.md  unseal_template.ps1  vcpkg.json
cmake/: project_setting.cmake  vcpkg_env.cmake
deps_party/global_utils/include/: dynamic-library-loader.hpp  mat-ref.h  runtime-visualizer-curve_editer.hpp  runtime-visualizer-dock_builder.hpp  runtime-visualizer-gradient_editer.hpp  runtime-visualizer-image_watcher.hpp  runtime-visualizer-interrupter.hpp  runtime-visualizer-signal.hpp  runtime-visualizer.hpp
source/: CMakeLists.txt  app.cpp  generate_random_image.h  streamable.h
source/application/: CMakeLists.txt  app.cpp  visualizer.cpp  visualizer.h
source/interface_library/: CMakeLists.txt  channel.hpp  dynamic_library_loader.hpp  global-variables.hpp  global_regerr.hpp  imgui_widget.hpp  interface_application.hpp  interface_backend.hpp  interface_executor.hpp  interface_frame.hpp  interface_gui.hpp  interface_imgui.hpp  interface_platform.hpp  self_releasing_async.hpp
source/static_library/: CMakeLists.txt  application.cpp  application.hpp  backend_opengl.cpp  backend_opengl.hpp  debugger.cpp  debugger.hpp  debugger_impl.hpp  executor.cpp  executor.hpp  frame_demo.hpp  impl_vulkan_t.hpp  platform_glfw.cpp  platform_glfw.hpp  static.cpp  static.hpp  watcher.cpp  watcher.hpp  watcher_impl.hpp
